...

    <!-- Common Actions -->
    <string name="action_confirm">确定</string>
    <string name="action_cancel">取消</string>
    <string name="action_close">关闭</string>
    <string name="action_ok">好的</string>
    <string name="action_done">完成</string>
    <string name="action_apply">应用</string>
    <string name="action_send">发送</string>
    <string name="action_delete">删除</string>
    <string name="action_rename">重命名</string>
    <string name="action_share">分享</string>
    <string name="action_refresh">刷新</string>
...
